fix: update status pengurus handler not registered
